Fixing the names in userResources and Making Summary for Technology